little css fix of border not showing on the left side

--- a/css/co2ok.css
+++ b/css/co2ok.css
@@ -9,7 +9,8 @@
   font-family: Roboto, sans-serif;
   color: #606468;
   z-index: 10;
-  width: 259px; }
+  width: 259px;
+  margin-left: 3px; }
   .co2ok_container .co2ok_payoff {
     width: 100%;
     margin-top: 6px;
@@ -89,6 +90,8 @@
       color: white;
       text-shadow: 2px 2px 8px #6d6d6d;
       box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05); }
+      .co2ok_container .co2ok_checkbox_container.selected .co2ok_payoff {
+        margin-bottom: 400px; }
       .co2ok_container .co2ok_checkbox_container.selected #checkbox {
         padding: 2px;
         background-color: white;
